testdata/baselines/reference/submodule/conformance/varRequireFromJavascript.errors.txt
ex.js(4,14): error TS2339: Property 'n' does not exist on type 'Crunch'.
ex.js(7,21): error TS2339: Property 'n' does not exist on type 'Crunch'.
use.js(5,8): error TS2339: Property 'n' does not exist on type 'Crunch'.
use.js(13,10): error TS2339: Property 'n' does not exist on type 'Crunch'.


==== use.js (2 errors) ====
    var ex = require('./ex')
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
           ~
!!! error TS2339: Property 'n' does not exist on type 'Crunch'.
    
    
    // types work
    /**
     * @param {ex.Crunch} wrap
     */
    function f(wrap) {
        wrap.n
             ~
!!! error TS2339: Property 'n' does not exist on type 'Crunch'.
    }
    
==== ex.js (2 errors) ====
    export class Crunch {
        /** @param {number} n */
        constructor(n) {
            this.n = n
                 ~
!!! error TS2339: Property 'n' does not exist on type 'Crunch'.
        }
        m() {
            return this.n
                        ~
!!! error TS2339: Property 'n' does not exist on type 'Crunch'.
        }
    }
    